print function
1) print function
print keyword in Python 2.x is replaced by the print() function in Python 3.x. However,
parentheses work in Python 2 if space is added after the print keyword because the interpreter evaluates it as an expression. 

print 'Hello, Geeks'	 # Python 3.x doesn't support

print('Hope You like these facts')



'''

Output in Python 2.x :

Hello, Geeks

Hope You like these facts



Output in Python 3.x :

File "a.py", line 1

	print 'Hello, Geeks'

        	^
SyntaxError: invalid syntax


--------------------------------------------------------------------str type-------------------------------------------------------------------------------------------

In Python 2, an implicit str type is ASCII. But in Python 3.x implicit str type is Unicode. 
print(type('default string '))

print(type(b'string with b '))



'''

Output in Python 2.x (Bytes is same as str)

<type 'str'>

<type 'str'>



Output in Python 3.x (Bytes and str are different)

<class 'str'>

<class 'bytes'>

'''


-----------------------------------------------------------------------------unicode----------------------------------------------------------------------------------
Python 2.x also supports Unicode 
print(type('default string '))

print(type(u'string with b '))



'''

Output in Python 2.x (Unicode and str are different)

<type 'str'>

<type 'unicode'>



Output in Python 3.x (Unicode and str are same)

<class 'str'>

<class 'str'>

'''
-----------------------------------------------------------xrange()-----------------------------------------------------------------------------------------------------
xrange() of Python 2.x doesn’t exist in Python 3.x. In Python 2.x, range returns a list i.e. range(3) returns [0, 1, 2] while xrange returns a xrange object i. e.,
xrange(3) returns iterator object which works similar to Java iterator and generates number when needed. 



for x in xrange(1, 5):

	print(x),


for x in range(1, 5):

	print(x),



'''

Output in Python 2.x

1 2 3 4 1 2 3 4



Output in Python 3.x

NameError: name 'xrange' is not defined

'''

